--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -11,8 +11,10 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
-# reth
+# world-chain-builder
+world-chain-builder-payload.workspace = true
 
+# reth
 reth-db.workspace = true
 
 reth-primitives.workspace = true
