--- a/world-chain-builder/crates/world/pbh/Cargo.toml
+++ b/world-chain-builder/crates/world/pbh/Cargo.toml
@@ -10,3 +10,4 @@ chrono = { workspace = true }
 thiserror = { workspace = true }
 semaphore.workspace = true
 strum.workspace = true
+serde.workspace = true
