--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -113,7 +113,7 @@ revm = { version = "18.0.0", features = ["std"], default-features = false }
 revm-primitives = { version = "14.0.0", default-features = false }
 
 # 3rd party
-jsonrpsee = { version = "0.24", features = ["server", "macros"] }
+jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 chrono = "0.4"
