Back to square 1

--- a/world-chain-builder/crates/world/primitives/Cargo.toml
+++ b/world-chain-builder/crates/world/primitives/Cargo.toml
@@ -12,11 +12,17 @@ workspace = true
 
 [dependencies]
 world-chain-builder-pbh.workspace = true
-alloy-eips.workspace = true
-alloy-rlp.workspace = true
+
 reth.workspace = true
 reth-primitives = { workspace = true, features = ["optimism"] }
+
+revm-primitives.workspace = true
+
+alloy-eips.workspace = true
+alloy-rlp.workspace = true
+
 tracing.workspace = true
+bytes.workspace = true
 
 [dev-dependencies]
 alloy-consensus.workspace = true
