--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -39,6 +39,12 @@ eyre.workspace = true
 futures.workspace = true
 clap.workspace = true
 
+[dev-dependencies]
+criterion.workspace = true
+semaphore.workspace = true
+
+world-chain-builder-pool = { workspace = true, features = ["test"] }
+
 [[bench]]
 name = "validate_transaction"
 harness = false
