--- a/world-chain-builder/crates/world/pbh/Cargo.toml
+++ b/world-chain-builder/crates/world/pbh/Cargo.toml
@@ -11,3 +11,7 @@ thiserror = { workspace = true }
 semaphore.workspace = true
 strum.workspace = true
 serde.workspace = true
+
+[dev-dependencies]
+ethers-core.workspace = true
+test-case.workspace = true
