Packed external nullifier encoding

--- a/world-chain-builder/crates/world/pbh/Cargo.toml
+++ b/world-chain-builder/crates/world/pbh/Cargo.toml
@@ -4,7 +4,8 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-alloy-rlp.workspace = true
+alloy-rlp = { workspace = true, features = ["derive"] }
+alloy-primitives = { workspace = true, features = ["rlp"] }
 
 chrono = { workspace = true }
 thiserror = { workspace = true }
