--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -19,15 +19,9 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
+      - uses: taiki-e/install-action@nextest
       - name: tests
-        run: just test-ci
-      - name: Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()    # run this step even if previous step failed
-        with:
-          name: Report
-          path: world-chain-builder/target/nextest/ci/junit.xml
-          reporter: jest-junit        # Format of test results
+        run: just test
 
   cargo-lint:
     runs-on: ubuntu-latest
