--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -4,8 +4,8 @@ set positional-arguments
 test: 
   cargo nextest run --workspace
 
-build-max-perf *args='':
-  RUSTFLAGS="-C target-cpu=native" cargo build --features=jemmaloc $@
+build *args='':
+  RUSTFLAGS="-C target-cpu=native" cargo build $@
 
 # Formats the world-chain-builder
 fmt: fmt-fix fmt-check
