--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         build:
           - command: build-node
             binary: world-chain-builder
-            path: crates/world/bin
+            features: jemalloc
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -69,12 +69,12 @@ jobs:
           echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
 
       - name: Build World Chain
-        run: just ${{ matrix.build.command }} --bin ${{matrix.build.path}} --target ${{ matrix.configs.target }}
+        run: just ${{ matrix.build.command }} --bin ${{matrix.build.binary}} --profile ${{matrix.configs.profile}} --target ${{ matrix.configs.target }} --features ${{ matrix.build.features}}
       - name: Move binary
         run: |
           mkdir artifacts
           [[ "${{ matrix.configs.target }}" == *windows* ]] && ext=".exe"
-          mv "target/${{ matrix.configs.target }}/${{ matrix.configs.profile }}/${{ matrix.build.binary }}${ext}" ./artifacts
+          mv "${{matrix.build.binary}}/target/${{ matrix.configs.target }}/${{ matrix.configs.profile }}/${{ matrix.build.binary }}${ext}" ./artifacts
 
       - name: Configure GPG and create artifacts
         env:
