--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,9 +43,6 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-20.04
             profile: maxperf
-          - target: x86_64-apple-darwin
-            os: macos-13
-            profile: maxperf
           - target: aarch64-apple-darwin
             os: macos-14
             profile: maxperf
@@ -139,7 +136,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./world-chain-builder
+          context: world-chain-builder
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
