--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -4,8 +4,8 @@ set positional-arguments
 test: 
   cargo nextest run --workspace
 
-build *args='':
-  RUSTFLAGS="-C target-cpu=native" cargo build $@
+cross-build *args='':
+  RUSTFLAGS="-C link-arg=-lgcc -Clink-arg=-static-libgcc" cross-build $@
 
 # Formats the world-chain-builder
 fmt: fmt-fix fmt-check
