--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -16,3 +16,5 @@ fmt-check:
 e2e-test:
     RUST_LOG=info cargo run -p tests --release 
 
+install *args='':
+  cargo install --path crates/world/bin --locked $@
