--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,7 +10,7 @@ on:
     tags:
         - v*
   pull_request:
-    
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -40,6 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+      - uses: taiki-e/install-action@just
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
