--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -52,7 +52,10 @@ jobs:
             --chain ${{ matrix.chain.chain }} \
             --debug.tip ${{ matrix.chain.tip }} \
             --debug.max-block ${{ matrix.chain.block }} \
-            --debug.terminate
+            --debug.terminate \
+            --builder.pbh_entrypoint 0x7a2088a1bFc9d81c55368AE168C2C02570cB814F \
+            --builder.signature_aggregator 0x09635F643e140090A9A8Dcd712eD6285858ceBef
+            
       - name: Verify the target block hash
         run: |
           ${{ matrix.chain.bin }} db --chain ${{ matrix.chain.chain }} get static-file headers ${{ matrix.chain.block }} \
