--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -15,7 +15,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-          
       - uses: taiki-e/install-action@just
       - uses: dtolnay/rust-toolchain@stable
 
@@ -28,12 +27,27 @@ jobs:
         run: |
           forge --version
 
-      - name: Setup Kurtosis
+      - name: "Install shell dependencies"
+        shell: bash
         run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install kurtosis-cli
-          kurtosis analytics disable
+            if [ -z "$(which yq)" ]; then
+              sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+            fi
+      
+            if [ -z "$(which envsubst)" ]; then
+              sudo apt-get update
+              sudo apt-get install gettext-base
+            fi
+
+      - name: Setup Kurtosis
+        shell: bash
+        run: |
+            echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+            sudo apt update
+              sudo apt install kurtosis-cli
+            
+            kurtosis analytics disable
+            echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
 
       - name: Setup Minikube
         uses: medyagh/setup-minikube@latest
