--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -3,6 +3,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 1'
+  push:
+    tags:
+        - v*
 
 env:
   CARGO_TERM_COLOR: always
@@ -44,7 +47,7 @@ jobs:
         run: |
             echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
             sudo apt update
-              sudo apt install kurtosis-cli
+            sudo apt install kurtosis-cli
             
             kurtosis analytics disable
             echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
