--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -17,9 +17,11 @@ reth-primitives.workspace = true
 reth-provider.workspace = true
 reth-eth-wire-types.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
+reth-trie-db = { workspace = true, optional = true }
+reth-trie = { workspace = true, optional = true }
+reth-stages-types = { workspace = true, optional = true }
 reth-optimism-primitives.workspace = true
 reth-optimism-chainspec.workspace = true
-
 revm-primitives.workspace = true
 
 alloy-consensus.workspace = true
@@ -53,7 +55,7 @@ reth-e2e-test-utils.workspace = true
 
 [features]
 default = []
-test = ["dep:reth-e2e-test-utils"]
+test = ["dep:reth-e2e-test-utils", "dep:reth-trie-db", "dep:reth-stages-types", "dep:reth-trie"]
 
 [lints]
 workspace = true
