--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -16,31 +16,31 @@ world-chain-builder-pool.workspace = true
 world-chain-builder-pbh = { workspace = true, optional = true }
 
 reth.workspace = true
-reth-chain-state.workspace = true
-reth-db.workspace = true
+reth-chain-state = { workspace = true, optional = true }
+reth-db = { workspace = true, optional = true }
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-optimism-payload-builder.workspace = true
-reth-primitives.workspace = true
-reth-primitives-traits.workspace = true
+reth-primitives = { workspace = true, optional = true }
+reth-primitives-traits = { workspace = true, optional = true }
 reth-provider.workspace = true
-reth-prune-types.workspace = true
-reth-trie.workspace = true
+reth-prune-types = { workspace = true, optional = true }
+reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 
-alloy-eips.workspace = true
+alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
-alloy-rpc-types.workspace = true
-alloy-sol-types.workspace = true
+alloy-rpc-types = { workspace = true, optional = true }
+alloy-sol-types = { workspace = true, optional = true }
 
 revm-primitives = { workspace = true, optional = true }
 
-tokio.workspace = true
+tokio = { workspace = true, optional = true }
 eyre.workspace = true
-futures.workspace = true
+futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 
@@ -72,7 +72,18 @@ test = [
     "world-chain-builder-pool/test",
     "world-chain-builder-pbh",
     "dep:reth-e2e-test-utils",
+    "dep:reth-chain-state",
+    "dep:reth-primitives",
+    "dep:reth-primitives-traits",
+    "dep:reth-prune-types",
+    "dep:reth-trie",
+    "dep:reth-db",
     "dep:revm-primitives",
+    "dep:alloy-rpc-types",
+    "dep:alloy-sol-types",
+    "dep:alloy-eips",
+    "dep:futures",
     "dep:chrono",
+    "dep:tokio",
 ]
 
