--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,6 +5,7 @@ out = "out"
 libs = ["lib"]
 optimizer = true
 optimizer_runs = 200
+fs_permissions = [{ access = "read-write", path = "./" }]
 
 [fuzz]
 runs = 5000
@@ -12,4 +13,5 @@ max_test_rejects = 150000
 
 [fmt]
 ignore = ["lib"]
+
 
