--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -99,6 +99,8 @@ op-alloy-rpc-types-engine = "0.9.0"
 op-alloy-network = "0.9.0"
 
 # alloy
+alloy-provider = { version = "0.9.2", default-features = false }
+alloy-transport = { version = "0.9.2", default-features = false }
 alloy-consensus = { version = "0.9.2", default-features = false }
 alloy-network = { version = "0.9.2", default-features = false }
 alloy-primitives = { version = "0.8.18", default-features = false }
@@ -138,6 +140,7 @@ clap = { version = "4", features = ["derive", "env"] }
 eyre = { version = "0.6", package = "color-eyre" }
 serde = { version = "1", features = ["derive"] }
 tracing = "0.1"
+tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
 parking_lot = "0.12"
 derive_more = "1"
 dotenvy = "0.15.7"
