--- a/world-chain-builder/crates/tests/Cargo.toml
+++ b/world-chain-builder/crates/tests/Cargo.toml
@@ -1,20 +1,29 @@
 [package]
 name = "tests"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+
+[lints]
+workspace = true
 
 [dependencies]
-world-chain-builder-node = { path = "../world/node", features = ["test"] }
-tracing = "0.1"
-tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
-clap = { version = "4", features = ["derive", "env"] }
+world-chain-builder-node = { workspace = true, features = ["test"]}
+
 alloy-primitives.workspace = true
-alloy-provider = "0.4"
-alloy-transport = "0.4"
-alloy-network = "0.4"
-alloy-rpc-types-eth = "0.4"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-futures = "0.3"
-tokio = { version = "1", features = ["full"] }
-eyre = { version = "0.6", package = "color-eyre" }
+alloy-provider.workspace = true
+alloy-transport.workspace = true
+alloy-network.workspace = true
+alloy-rpc-types-eth.workspace = true
+
+tracing.workspace = true
+tracing-subscriber.workspace = true
+clap.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+futures.workspace = true
+tokio.workspace = true
+eyre.workspace = true
