--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -14,7 +14,7 @@ fmt-check:
   cargo +nightly fmt --all -- --check
 
 e2e-test *args='':
-    RUST_LOG=info cargo run -p tests --release -- $@
+    RUST_LOG=debug cargo run -p tests --release -- $@
 
 install *args='':
   cargo install --path crates/world/bin --locked $@
