--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -26,10 +26,12 @@ reth-optimism-payload-builder.workspace = true
 reth-primitives = { workspace = true, optional = true }
 reth-primitives-traits = { workspace = true, optional = true }
 reth-provider.workspace = true
+reth-optimism-evm = { workspace = true, optional = true }
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
+reth-evm = { workspace = true, optional = true}
 
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
@@ -74,8 +76,10 @@ test = [
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
     "dep:reth-primitives",
+    "dep:reth-evm",
     "dep:reth-primitives-traits",
     "dep:reth-prune-types",
+    "dep:reth-optimism-evm",
     "dep:reth-trie",
     "dep:reth-db",
     "dep:revm-primitives",
