--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -32,6 +32,7 @@ alloy-eips.workspace = true
 alloy-sol-types.workspace = true
 alloy-rlp.workspace = true
 alloy-signer-local = { workspace = true, optional = true }
+alloy-signer.workspace = true
 alloy-network = { workspace = true, optional = true }
 op-alloy-consensus.workspace = true
 
