--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -32,9 +32,11 @@ alloy-eips.workspace = true
 alloy-sol-types.workspace = true
 alloy-rlp.workspace = true
 alloy-signer-local = { workspace = true, optional = true }
-alloy-signer.workspace = true
+alloy-signer = { workspace = true, optional = true }
 alloy-network = { workspace = true, optional = true }
 op-alloy-consensus.workspace = true
+
+rundler-types = { workspace = true, optional = true }
 
 # 3rd party
 ethers-core.workspace = true
@@ -46,6 +48,7 @@ tracing.workspace = true
 parking_lot.workspace = true
 bon = { workspace = true, optional = true }
 rayon.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
@@ -61,7 +64,9 @@ test = [
     "dep:reth-stages-types",
     "dep:reth-trie",
     "dep:alloy-signer-local",
+    "dep:alloy-signer",
     "dep:alloy-network",
+    "dep:rundler-types",
     "dep:bon",
 ]
 
