--- a/world-chain-builder/crates/tests/Cargo.toml
+++ b/world-chain-builder/crates/tests/Cargo.toml
@@ -22,6 +22,8 @@ alloy-rpc-types-eth.workspace = true
 
 reth-e2e-test-utils.workspace = true
 
+rundler-types.workspace = true
+
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
