--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -24,6 +24,7 @@ reth-optimism-primitives.workspace = true
 reth-optimism-chainspec.workspace = true
 revm-primitives.workspace = true
 reth-primitives-traits.workspace = true
+reth-optimism-forks.workspace = true
 
 alloy-consensus.workspace = true
 alloy-primitives.workspace = true
