--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -26,6 +26,7 @@ revm-primitives.workspace = true
 reth-primitives-traits.workspace = true
 reth-optimism-forks.workspace = true
 
+alloy-genesis.workspace = true
 alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-rpc-types.workspace = true
