--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -31,6 +31,7 @@ reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
+reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
@@ -44,6 +45,8 @@ eyre.workspace = true
 futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
+tracing.workspace = true
+
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
