--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -21,10 +21,14 @@ reth-db = { workspace = true, optional = true }
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
+reth-basic-payload-builder.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-primitives = { workspace = true, optional = true }
 reth-optimism-forks.workspace = true
+reth-primitives-traits.workspace = true
+
 reth-provider.workspace = true
+reth-evm.workspace = true
 reth-optimism-evm.workspace = true
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
@@ -52,6 +56,7 @@ world-chain-builder-rpc.workspace = true
 world-chain-builder-pool = { workspace = true, features = ["test"] }
 
 reth-e2e-test-utils.workspace = true
+reth-evm.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-evm.workspace = true
