use wc tx envelope in ethapi

--- a/world-chain-builder/crates/world/rpc/Cargo.toml
+++ b/world-chain-builder/crates/world/rpc/Cargo.toml
@@ -20,6 +20,7 @@ reth-provider.workspace = true
 revm-primitives.workspace = true
 reth-optimism-rpc.workspace = true
 reth-optimism-node.workspace = true
+reth-optimism-primitives.workspace = true
 
 alloy-consensus.workspace = true
 alloy-eips.workspace = true
