--- a/world-chain-builder/crates/tests/Cargo.toml
+++ b/world-chain-builder/crates/tests/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 world-chain-builder-node = { workspace = true, features = ["test"]}
 world-chain-builder-pool = { workspace = true, features = ["test"]}
 world-chain-builder-test-utils.workspace = true
+world-chain-builder-pbh.workspace = true
 
 alloy-primitives.workspace = true
 alloy-provider.workspace = true
@@ -31,3 +32,4 @@ serde_json.workspace = true
 futures.workspace = true
 tokio.workspace = true
 eyre.workspace = true
+chrono.workspace = true
