--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -24,9 +24,11 @@ reth-optimism-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-primitives = { workspace = true, optional = true }
+reth-node-builder.workspace = true
+reth-node-api.workspace = true
+reth-optimism-rpc.workspace = true
 reth-optimism-forks.workspace = true
 reth-primitives-traits.workspace = true
-
 reth-provider.workspace = true
 reth-evm.workspace = true
 reth-optimism-evm.workspace = true
