fix: revm primitives

--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -42,7 +42,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types = { workspace = true, optional = true }
 alloy-sol-types = { workspace = true, optional = true }
 
-revm-primitives = { workspace = true, optional = true }
+revm-primitives = { workspace = true }
 
 tokio = { workspace = true, optional = true }
 eyre.workspace = true
@@ -85,7 +85,6 @@ test = [
     "dep:reth-prune-types",
     "dep:reth-trie",
     "dep:reth-db",
-    "dep:revm-primitives",
     "dep:alloy-rpc-types",
     "dep:alloy-sol-types",
     "dep:alloy-eips",
