--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -41,8 +41,7 @@ alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
 alloy-rpc-types = { workspace = true, optional = true }
 alloy-sol-types = { workspace = true, optional = true }
-
-revm-primitives = { workspace = true, optional = true }
+revm-primitives.workspace = true
 
 tokio = { workspace = true, optional = true }
 eyre.workspace = true
@@ -85,7 +84,6 @@ test = [
     "dep:reth-prune-types",
     "dep:reth-trie",
     "dep:reth-db",
-    "dep:revm-primitives",
     "dep:alloy-rpc-types",
     "dep:alloy-sol-types",
     "dep:alloy-eips",
