--- a/world-chain-builder/crates/tests/sepolia/Cargo.toml
+++ b/world-chain-builder/crates/tests/sepolia/Cargo.toml
@@ -12,11 +12,31 @@ workspace = true
 
 [dependencies]
 world-chain-builder-test-utils.workspace = true
+world-chain-builder-pbh.workspace = true
+toolkit.workspace = true
 
+alloy-primitives.workspace = true
+alloy-provider.workspace = true
+alloy-signer-local.workspace = true
+alloy-signer.workspace = true
+alloy-rpc-types-eth.workspace = true
+alloy-sol-types.workspace = true
+alloy-eips.workspace = true
+alloy-consensus.workspace = true
+alloy-transport-http.workspace = true
+alloy-rpc-client.workspace = true
+
+reth-rpc-layer.workspace = true
+chrono.workspace = true
 reqwest.workspace = true
-semaphore.workspace = true
+semaphore-rs = { workspace = true, features = ["depth_30"]}
+serde_json.workspace = true
+serde = { workspace = true, features = ["derive"]}
+rand = "0.8.5"
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
-signup-sequencer.workspace = true
+eyre.workspace = true
+futures.workspace = true
+base64.workspace = true
