--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "crates/world/payload",
     "crates/world/rpc",
     "crates/world/pbh",
-    "crates/world/pool", 
+    "crates/world/pool",
     "crates/world/test-utils",
     "crates/tests/sepolia",
     "crates/tests/devnet",
@@ -38,6 +38,7 @@ world-chain-builder-payload = { path = "crates/world/payload" }
 world-chain-builder-rpc = { path = "crates/world/rpc" }
 world-chain-builder-pool = { path = "crates/world/pool" }
 world-chain-builder-test-utils = { path = "crates/world/test-utils" }
+toolkit = { path = "crates/toolkit" }
 
 # reth
 reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
@@ -65,6 +66,7 @@ reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0
 reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
 reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", default-features = false }
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
+reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
 
 # reth-optimism
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
@@ -102,6 +104,8 @@ op-alloy-network = "0.10.3"
 # alloy
 alloy-provider = { version = "0.11.1", default-features = false }
 alloy-transport = { version = "0.11.1", default-features = false }
+alloy-rpc-client = { version = "0.11.1", default-features = false }
+alloy-transport-http = { version = "0.11.1", default-features = false }
 alloy-consensus = { version = "0.11.1", default-features = false }
 alloy-network = { version = "0.11.1", default-features = false }
 alloy-primitives = { version = "0.8.20", default-features = false }
@@ -133,9 +137,8 @@ chrono = "0.4"
 thiserror = "1"
 strum = { version = "0.26", features = ["derive"] }
 bytemuck = "1"
-semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f899add7116ccc1228f5e5e5ee2e2e233768", features = [
-    "depth_30",
-] }
+semaphore-rs = "0.3.1"
+semaphore-rs-tree = "0.3.1"
 clap = { version = "4", features = ["derive", "env"] }
 eyre = { version = "0.6", package = "color-eyre" }
 serde = { version = "1", features = ["derive"] }
@@ -156,4 +159,4 @@ rand = { version = "0.8", features = ["small_rng"] }
 reqwest = { version = "0.12", default-features = false }
 bon = "3.3.0"
 rayon = "1.10.0"
-signup-sequencer = { git = "https://github.com/worldcoin/signup-sequencer" }
+base64 = "0.22.1"
