--- a/world-chain-builder/crates/world/pbh/Cargo.toml
+++ b/world-chain-builder/crates/world/pbh/Cargo.toml
@@ -9,7 +9,7 @@ alloy-primitives = { workspace = true, features = ["rlp"] }
 
 chrono = { workspace = true }
 thiserror = { workspace = true }
-semaphore.workspace = true
+semaphore-rs = { workspace = true, features = ["depth_30"]}
 strum.workspace = true
 serde.workspace = true
 bon.workspace = true
