--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -41,7 +41,7 @@ op-alloy-consensus.workspace = true
 # 3rd party
 ethers-core.workspace = true
 tokio.workspace = true
-semaphore.workspace = true
+semaphore-rs = { workspace = true, features = ["depth_30"]}
 eyre = { workspace = true, optional = true }
 thiserror.workspace = true
 tracing.workspace = true
