--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -111,6 +111,7 @@ alloy-sol-types = "0.8.18"
 # revm
 revm = { version = "20.0.0-alpha.5", default-features = false }
 revm-primitives = { version = "16.0.0-alpha.3", default-features = false }
+op-revm = { version = "1.0.0-alpha.3", default-features = false }
 
 # rpc
 jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
